added end points for teams