@@ -1,10 +1,11 @@
 package com.manager.cfa_jan2023;
 
-import com.manager.cfa_jan2023.service.utils.Battler;
+
+import com.manager.cfa_jan2023.service.utils.PokemonBattler;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -16,22 +17,14 @@ class CfaJan2023ApplicationTests {
 //
 //	}
 
-	@Test
-	void shouldflipACoin(){
-		flipACoin();
-		//todo: Assertion
-	}
-//	@Test
-//	void shouldGenerateARandomTeam(){
-//		//generateARandomTeam();
-//		//todo: Assertion
-//	}
 
 	@Test
-	void shouldReturnCombatScoreofHalf(){
-		Battler battler= new Battler();
-		assertEquals(battler.getAttackScore(Arrays.asList("Grass"), Arrays.asList("Rock","Fire")),0.5);
+	void shouldReturnCombatScoreOfHalf(){
+		PokemonBattler pokemonBattler = new PokemonBattler();
+		assertEquals(0.5, pokemonBattler.getAttackScore(List.of("Grass"), List.of("Rock", "Fire")));
 
 	}
+
+
 
 }
